Latest results and baseline executables. 	modified:   RegressionTestsResults.ods 	modified:   dwarfdump-i386-ubuntu.O 	modified:   dwarfdump-s390.O 	modified:   dwarfdump-x86_64-ubuntu.O
Minor comment.
	modified:   gsplitdwarf/README

--- a/gsplitdwarf/README
+++ b/gsplitdwarf/README
@@ -2,8 +2,11 @@ July 3, 2020
 Source is dwarfexample/debuglink code in the libdwarf/dwarfdump source tree.
 The build was -gsplit-dwarf -gdwarf-4
 
+
 frame1 is also from libdwarf code/dwarfexample, the frame1.c example.
 -gsplit-dwarf -gdwarf-5
+
+clang -gdwarf-5 -fdebug-macro 
 
 frame1 sections:
 [ 0] 0x00000000 0x00000000
