Squashed commit of the following: Now one can run regression tests in any convenient temporary directory. Significant changes in  DWARFTEST.sh CLEANUP PICKUPBIN CHECKIFRUNNING.sh RUNALL.sh BASEFILES is created by configure with all the needed target/source directories. BASEFUNCS created with a couple shell functions used in various runtest files.
Every */runtest.sh also changed significantly.
Each now uses BASEFILES to get the needed directory
names.

commit 674212bf1067c32a013d8d7c38d3a2db35d5a781
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 09:04:21 2020 -0700

    Now remove t.o copied from kaufmann into debugfissionb.
    	modified:   CLEANUP

commit f7519af67c3fc596e75cf8558feabdc6f8977b0f
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 08:42:11 2020 -0700

    Now with NEWS and with a simpler lock file arrangement.
    	modified:   DWARFTEST.sh

commit 1be250349d49c3a84a48017e725dc458580dcd9c
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 08:41:45 2020 -0700

    	new file:   NEWS

commit 7e38a3e5e936e31ee1842cd4b5bd4dda02b306bc
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 07:59:43 2020 -0700

    Removed use of ps command. no longer needed.
    	modified:   CHECKIFRUNNING.sh
    	modified:   DWARFTEST.sh

commit 5e4645b03cf99063f0cc7bb4ae577c697408862c
Author: David Anderson <davea42@linuxmail.org>
Date:   Mon Oct 26 21:45:46 2020 -0700

    Working on separate and this location.
    	modified:   CLEANUP
    	modified:   DWARFTEST.sh
    	modified:   PICKUPBIN
    	modified:   RUNALL.sh
    	modified:   baddie1/runtest.sh
    	modified:   configure
    	modified:   configure.ac

commit a02238bdb7d2994299cf1ac67aebbaab4e763ac2
Author: David Anderson <davea42@linuxmail.org>
Date:   Mon Oct 26 16:06:35 2020 -0700

    blddir needed -rf
    	modified:   CLEANUP
    Remove blank line
    	modified:   PICKUPBIN

commit 23f3c223ec8158ec77c5593b7c42caf37c424395
Author: David Anderson <dave

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,33 @@
+2020-10-26 David Anderson
+    * All this enables running of a regression test
+      outside of the test sources.
+    * BASEFILES: This is created by configure and
+      has settings for all the important directories
+      used in testing.
+    * BASEFUNCS: Added a shell file with script functions
+      used by multiple runntest.sh scripts.
+    * CHECKIFRUNNING.sh: Removed use of ps, just use
+      simple test run directory file as lock file. 
+    * CLEANUP: the reorganization left a couple files
+      needing to be cleaned out after a test.
+    * DWARFTEST.sh: Removed use of ps -eaf, not needed
+      now.  New shell functions let us shorten the
+      script while doing more than before. 
+      running each 'runtest.sh' can now omit the
+      directory names. BASEFILES has them all and
+      each runtest.sh references it.
+    * Makefile.in: Adds creating Makefile using @srcdir@
+      and references test base dir rather than "."
+    * NEWS: A new file mentioning the new ability to run
+      a regression test in whatever empty directory
+      one wants to.
+    * PICKUPBIN: Uses BASEFILES to get the needed directories
+      so the build can put them into the testing directory.
+    * RUNALL.sh: Refers to the newly appropriate directories
+    * */runtest.sh: Every runtest.sh changed to use
+      BASEFILES to get directory information (no longer
+      passed on the runtest.sh invocation lines.
+      They all required significant change.
 2020-07-18 David Anderson
     * dwarfdump-i386-freebsd.O,dwarfdump-x86_64-freebsd.O:
       A disk drive crashed (many many errors) 
