modified:   DWARFTEST.sh
new baselines. After two 10 year old disks crashed
and two reinstalls from scratch we have new baselines.
	modified:   dwarfdump-i386-freebsd.O
	modified:   dwarfdump-x86_64-freebsd.O
	modified:   dwarfdump-x86_64-ubuntu.O

Use the preferred form of #!/usr/bin/env python<n>
so it works on freebsd too.
	modified:   python2/checksize.py
	modified:   python2/exfail.py
	modified:   python2/showpct.py
	modified:   python2/trimdate.py
	modified:   python2/trimsimple.py
	modified:   python2/usertime.py
	modified:   python3/checksize.py
	modified:   python3/exfail.py
	modified:   python3/showpct.py
	modified:   python3/showruntime.py
	modified:   python3/trimdate.py
	modified:   python3/trimsimple.py
	modified:   python3/usertime.py
	modified:   scripts/trimdate.py
	modified:   showpct.py
	modified:   trimsimple.py
	modified:   usertime.py

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-11-05 David Anderson
+    * configure.ac: now uses python path function
+      to generate canonical file names in BASENAMES.
+    * scripts/canonicalpath.py: A python
+      one line calling os.path...
+    * configure: Regenerated.
 2020-10-26 David Anderson
     * All this enables running of a regression test
       outside of the test sources.
