Up through 2021 end 	modified:   ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 2021-12-06:  David Anderson
+    commit 44c344e7164b765a5fb5d943187d3a1836584b19
+
+    Updated from git log
+            modified:   ChangeLog
+
+2021-12-06:  David Anderson
     commit 3c4ff1d4dc7ac4b6d300c318feca5773bc2c542c
 
     Describes what the set of tests here is doing.
